--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@ return false;
 <th>住まい</th>
 <td>バーチャル関西</td>
 </tr>
+<tr>
+<th>身長</th>
+<td>不明</td>
+</tr>
+<tr>
+<th>体重</th>
+<td>不明</td>
+</tr>
+<tr>
+<th>ファンの呼称</th>
+<td>主様、信者</td>
+</tr>
 </table>
 
 <div class="prof-image"><a href="https://twitter.com/Kamino_uto/status/1314884079804796928/photo/1" target="_blank"><img src="https://pbs.twimg.com/media/Ej9oGaOVgAAp-Zf?format=jpg&name=large"></a></div>
@@ -89,7 +101,7 @@ return false;
 </div>
 
 </section>
-<!--/#service-->
+<!--/#summary-->
 
 <section id="activity">
 
@@ -97,24 +109,43 @@ return false;
 
 <h3>活動内容</h3>
 <div class="list">
-<a href="https://www.youtube.com/channel/UCzWqCgnf8jDKUhyUBM3gazw" target="_blank"><img src="https://pbs.twimg.com/profile_images/1322556129101012992/DXY6g99f_400x400.jpg" alt=""></a>
-<h4>Youtube</h4>
-<p></p>
+<div class="activity-image"><a href="https://www.youtube.com/channel/UCzWqCgnf8jDKUhyUBM3gazw" target="_blank"><img src="https://yt3.ggpht.com/ytc/AAUvwnj4KbINxkKV2ipH8h15ub7YL_aomV83WQJOnC20=s900-c-k-c0x00ffffff-no-rj" alt=""></a></div>
+<h4><a href="https://utoutosama.booth.pm/items/2640212" target="_blank">【YouTube】神乃 うと【Uto channe!】</a></h4>
+<div class="activity-text">
+<p>YouTubeチャンネルページの概要より引用</p>
+<p><blockquote>今ならお高い壺を買わなくてもチャンネル登録ボタンを押すだけで信者になれます！！主様たちなら…推してくれるやんな…？🥺✨</blockquote></p>
+</div>
 </div>
 
 <div class="list">
-<a href="https://twitter.com/Kamino_uto" target="_blank"><img src="https://pbs.twimg.com/profile_images/1322556129101012992/DXY6g99f_400x400.jpg" alt=""></a>
-<h4>Twitter</h4>
-<p></p>
+<div class="activity-image"><a href="https://twitter.com/Kamino_uto" target="_blank"><img src="https://pbs.twimg.com/profile_images/1322556129101012992/DXY6g99f_400x400.jpg" alt=""></a></div>
+<h4><a href="https://utoutosama.booth.pm/items/2640212" target="_blank">【Twitter】神乃うと㌠💮🤍新人Vtuber</a></h4>
+<div class="activity-text">
+<p class="activity-h">タグ</p>
+<p>配信：<a href="https://twitter.com/search?q=%23%E3%81%86%E3%81%A8%E3%83%BC%E3%81%8F&f=live" target="_blank">#うとーく</a></p>
+<p>配信：<a href="https://twitter.com/search?q=%23%E7%A5%9E%E7%B5%B5%E3%81%86%E3%81%A8&f=live" target="_blank">#神絵うと</a></p>
+<p>配信スケジュール：<a href="https://twitter.com/search?q=%23%E3%81%86%E3%81%A8%E3%81%98%E3%82%85%E3%80%9C%E3%82%8B&f=live" target="_blank">#うとじゅ〜る</a></p>
+</div>
+</div>
+
+<div class="list">
+<div class="activity-image"><a href="https://utoutosama.booth.pm/" target="_blank"><img src="https://s2.booth.pm/95a39644-57f8-49da-95bb-b588e5d62583/i/2640302/ac2580f3-4f34-4474-8090-2e84f69a6743_base_resized.jpg" alt=""></a></div>
+<h4><a href="https://utoutosama.booth.pm/items/2640212" target="_blank">【BOOTH】神乃うと【うショップ❕❗】</a></h4>
+<div class="activity-text">
+<p><a href="https://utoutosama.booth.pm/items/2640302" target="_blank"><img src="https://s2.booth.pm/95a39644-57f8-49da-95bb-b588e5d62583/i/2640302/ac2580f3-4f34-4474-8090-2e84f69a6743_base_resized.jpg" class="booth-item-image">【公式ロゴ】アクリルキーホルダー</a></p>
+<p><a href="https://utoutosama.booth.pm/items/2640232" target="_blank"><img src="https://s2.booth.pm/95a39644-57f8-49da-95bb-b588e5d62583/i/2640232/cbb9f0b4-8fc6-4ab8-b0eb-44d7fae5b843_base_resized.jpg" class="booth-item-image">【限定販売】幸せ守り２０２１【赤】</a></p>
+<p><a href="https://utoutosama.booth.pm/items/2640212" target="_blank"><img src="https://s2.booth.pm/95a39644-57f8-49da-95bb-b588e5d62583/i/2640212/580d79ce-bd2c-4329-b91e-3fd0f6b56bd4_base_resized.jpg" class="booth-item-image">【限定販売】幸せ守り２０２１【青】</a></p>
+</div>
 </div>
 
 </section>
-<!--/#company-->
+<!--/#activity-->
 
 <section id="contact">
 
 <h2>Contact</h2>
 <p class="c">お問い合わせは以下までお願い致します。</p>
+<p class="c">内容の加筆修正依頼やサイトデザイン案なども募集してます。</p>
 <p class="c">※神乃うと様ご本人にはつながりません。※</p>
 <p class="c">
 <a class="twitter-timeline" data-width="400" data-height="500" data-theme="dark" href="https://twitter.com/_heptane_?ref_src=twsrc%5Etfw">Tweets by _heptane_</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
