アクティビティのリンク修正+ママ追加

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@ return false;
 <th>ファンの呼称</th>
 <td>主様、信者</td>
 </tr>
+<tr>
+<th>ママ</th>
+<td>こむぎママ(<a href="https://twitter.com/komugi_shiro" target="_blank">@komugi_shiro</a>)</td>
+</tr>
 </table>
 
 <div class="prof-image"><a href="https://twitter.com/Kamino_uto/status/1314884079804796928/photo/1" target="_blank"><img src="https://pbs.twimg.com/media/Ej9oGaOVgAAp-Zf?format=jpg&name=large"></a></div>
@@ -110,7 +114,7 @@ return false;
 <h3>活動内容</h3>
 <div class="list">
 <div class="activity-image"><a href="https://www.youtube.com/channel/UCzWqCgnf8jDKUhyUBM3gazw" target="_blank"><img src="https://yt3.ggpht.com/ytc/AAUvwnj4KbINxkKV2ipH8h15ub7YL_aomV83WQJOnC20=s900-c-k-c0x00ffffff-no-rj" alt=""></a></div>
-<h4><a href="https://utoutosama.booth.pm/items/2640212" target="_blank">【YouTube】神乃 うと【Uto channe!】</a></h4>
+<h4><a href="https://www.youtube.com/channel/UCzWqCgnf8jDKUhyUBM3gazw" target="_blank">【YouTube】神乃 うと【Uto channe!】</a></h4>
 <div class="activity-text">
 <p>YouTubeチャンネルページの概要より引用</p>
 <p><blockquote>今ならお高い壺を買わなくてもチャンネル登録ボタンを押すだけで信者になれます！！主様たちなら…推してくれるやんな…？🥺✨</blockquote></p>
@@ -119,7 +123,7 @@ return false;
 
 <div class="list">
 <div class="activity-image"><a href="https://twitter.com/Kamino_uto" target="_blank"><img src="https://pbs.twimg.com/profile_images/1322556129101012992/DXY6g99f_400x400.jpg" alt=""></a></div>
-<h4><a href="https://utoutosama.booth.pm/items/2640212" target="_blank">【Twitter】神乃うと㌠💮🤍新人Vtuber</a></h4>
+<h4><a href="https://twitter.com/Kamino_uto" target="_blank">【Twitter】神乃うと㌠💮🤍新人Vtuber</a></h4>
 <div class="activity-text">
 <p class="activity-h">タグ</p>
 <p>配信：<a href="https://twitter.com/search?q=%23%E3%81%86%E3%81%A8%E3%83%BC%E3%81%8F&f=live" target="_blank">#うとーく</a></p>
