挨拶、特技、口癖の追加

--- a/index.html
+++ b/index.html
@@ -98,7 +98,23 @@ return false;
 <th>ママ</th>
 <td>こむぎママ(<a href="https://twitter.com/komugi_shiro" target="_blank">@komugi_shiro</a>)</td>
 </tr>
-</table>
+<tr>
+<th>配信始めの挨拶</th>
+<td>こんうと</td>
+</tr>
+<tr>
+<th>配信始めの挨拶</th>
+<td>おつうと</td>
+</tr>
+<tr>
+<th>特技</th>
+<td>口笛(隙間風)</td>
+</tr>
+<tr>
+<th>口癖</th>
+<td>dau</td>
+</tr>
+</table>	
 
 <div class="prof-image"><a href="https://twitter.com/Kamino_uto/status/1314884079804796928/photo/1" target="_blank"><img src="https://pbs.twimg.com/media/Ej9oGaOVgAAp-Zf?format=jpg&name=large"></a></div>
 
@@ -118,6 +134,8 @@ return false;
 <div class="activity-text">
 <p>YouTubeチャンネルページの概要より引用</p>
 <p><blockquote>今ならお高い壺を買わなくてもチャンネル登録ボタンを押すだけで信者になれます！！主様たちなら…推してくれるやんな…？🥺✨</blockquote></p>
+<p>配信が一通り終わり、お疲れの挨拶をした後にうと様による無言の遊びが始まる</p>
+<p>信者が「ここからが本編」と言い出したところ、うと様本人も本編と言い出した<!--(7Rto2dr3q50以降なのは確定)--></p>
 </div>
 </div>
 
@@ -129,6 +147,7 @@ return false;
 <p>配信：<a href="https://twitter.com/search?q=%23%E3%81%86%E3%81%A8%E3%83%BC%E3%81%8F&f=live" target="_blank">#うとーく</a></p>
 <p>配信：<a href="https://twitter.com/search?q=%23%E7%A5%9E%E7%B5%B5%E3%81%86%E3%81%A8&f=live" target="_blank">#神絵うと</a></p>
 <p>配信スケジュール：<a href="https://twitter.com/search?q=%23%E3%81%86%E3%81%A8%E3%81%98%E3%82%85%E3%80%9C%E3%82%8B&f=live" target="_blank">#うとじゅ〜る</a></p>
+<p>月1で泥酔配信をすることを信者たちに約束している</p>
 </div>
 </div>
 
