--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ return false;
 
 <div class="list">
 <div class="activity-image"><a href="https://utoutosama.booth.pm/" target="_blank"><img src="https://s2.booth.pm/95a39644-57f8-49da-95bb-b588e5d62583/i/2640302/ac2580f3-4f34-4474-8090-2e84f69a6743_base_resized.jpg" alt=""></a></div>
-<h4><a href="https://utoutosama.booth.pm/items/2640212" target="_blank">【BOOTH】神乃うと【うショップ❕❗】</a></h4>
+<h4><a href="https://utoutosama.booth.pm/" target="_blank">【BOOTH】神乃うと【うショップ❕❗】</a></h4>
 <div class="activity-text">
 <p><a href="https://utoutosama.booth.pm/items/2640302" target="_blank"><img src="https://s2.booth.pm/95a39644-57f8-49da-95bb-b588e5d62583/i/2640302/ac2580f3-4f34-4474-8090-2e84f69a6743_base_resized.jpg" class="booth-item-image">【公式ロゴ】アクリルキーホルダー</a></p>
 <p><a href="https://utoutosama.booth.pm/items/2640232" target="_blank"><img src="https://s2.booth.pm/95a39644-57f8-49da-95bb-b588e5d62583/i/2640232/cbb9f0b4-8fc6-4ab8-b0eb-44d7fae5b843_base_resized.jpg" class="booth-item-image">【限定販売】幸せ守り２０２１【赤】</a></p>
