remove What's now

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ return false;
 <h1 id="logo"><a href="index.html"><img src="https://pbs.twimg.com/media/Eqme3xKUwAEZruV?format=jpg&name=large" alt="SAMPLE COMPANY"></a></h1>
 <nav id="menubar">
 <ul class="inline">
-<li><a href="#new">What's New</a></li>
 <li><a href="#summary">Summary</a></li>
 <li><a href="#activity">Activity</a></li>
+<li><a href="#history">History</a></li>
 <li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
@@ -46,17 +46,6 @@ return false;
 <div id="container">
 
 <div id="contents">
-
-<section id="new">
-
-<h2>What's New</h2>
-<dl>
-<dt>2021/02/09</dt>
-<dd>ページ公開</dd>
-</dl>
-
-</section>
-<!--/#new-->
 
 <section id="summary">
 
