--- a/index.html
+++ b/index.html
@@ -154,6 +154,20 @@ return false;
 </section>
 <!--/#activity-->
 
+<section id="history">
+
+<h2>History</h2>
+<div class="accordion-box">
+<label for="label1">表示/非表示(ネタバレ注意)</label>
+<input type="checkbox" id="label1"/>
+<div class="accordion-hidden">
+<p></p>
+</div>
+</div>
+
+</section>
+<!--/#history-->
+
 <section id="contact">
 
 <h2>Contact</h2>
