文言修正、初期活動遍歴追加

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ return false;
 <p><blockquote>今ならお高い壺を買わなくてもチャンネル登録ボタンを押すだけで信者になれます！！主様たちなら…推してくれるやんな…？🥺✨</blockquote></p>
 <p>配信が一通り終わり、お疲れの挨拶をした後にうと様による無言の遊びが始まる</p>
 <p>信者が「ここからが本編」と言い出したところ、うと様本人も本編と言い出した<!--(7Rto2dr3q50以降なのは確定)--></p>
-<p>月1で泥酔配信をすることを信者たちに約束している</p>
+<p>月1で泥酔配信をすることになっている(2021/03/21現在毎月1日)</p>
 </div>
 </div>
 
@@ -161,6 +161,8 @@ return false;
 <label for="label1">表示/非表示(ネタバレ注意)</label>
 <input type="checkbox" id="label1"/>
 <div class="accordion-hidden">
+<p>2020/10/10 - Twitterデビュー、うと様の活動開始記念日となる</p>
+<p>2020/10/17 - YouTubeデビュー、伝説の初配信、いろいろとすごいからアーカイブ見てくれ</p>
 <p></p>
 </div>
 </div>
