誕生日、ASMR追加

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ return false;
 </tr>
 <tr>
 <th>口癖</th>
-<td>dau</td>
+<td>dau!</td>
 </tr>
 </table>	
 
@@ -163,6 +163,8 @@ return false;
 <div class="accordion-hidden">
 <p>2020/10/10 - Twitterデビュー、うと様の活動開始記念日となる</p>
 <p>2020/10/17 - YouTubeデビュー、伝説の初配信、いろいろとすごいからアーカイブ見てくれ</p>
+<p>2021/3/21 - 活動後初めての誕生日</p>
+<p>2021/3/21 - <a src="https://www.youtube.com/watch?v=iKP0qoEuU8c">初ASMR</a></p>
 <p></p>
 </div>
 </div>
